tests/neg/semantic_deref_non_pointer.baa
// EXPECT: فك الإشارة '*' يتطلب مؤشراً

صحيح الرئيسية() {
    صحيح س = ١.
    صحيح ص = *س.
    إرجع ص.
}
